account for the 16 bytes of AT_RANDOM data in the stack setup.  fixes PR 48518. use cprng_strong32() instead of random().  add AT_RANDOM support for linux32.