sys/compat/linux/arch/arm/linux_exec.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: linux_exec.h,v 1.8 2008/04/28 20:23:42 martin Exp $	*/
+/*	$NetBSD: linux_exec.h,v 1.9 2014/02/09 16:41:42 chs Exp $	*/
 
 /*-
  * Copyright (c) 1998 The NetBSD Foundation, Inc.
@@ -36,7 +36,7 @@
 #define LINUX_MID_MACHINE	LINUX_M_ARM
 
 #define LINUX_ELF_AUX_ARGSIZ \
-	(howmany(LINUX_ELF_AUX_ENTRIES * sizeof(Aux32Info), sizeof(Elf32_Addr)))
+	(howmany(LINUX_ELF_AUX_ENTRIES * sizeof(Aux32Info), sizeof(Elf32_Addr)) + LINUX_RANDOM_BYTES)
 
 #define linux_exec_setup_stack	exec_setup_stack
 
